@@ -9,6 +9,7 @@ import pretend
 from os.path import join, normpath
 from tempfile import mkdtemp
 from tests.lib import assert_all_changes, pyversion
+from tests.lib import create_test_package_with_setup
 from tests.lib.local_repos import local_repo, local_checkout
 
 from pip.req import InstallRequirement
@@ -154,30 +155,52 @@ def test_uninstall_overlapping_package(script, data):
     assert_all_changes(result2, result3, [])
 
 
-def test_uninstall_entry_point(script):
+@pytest.mark.parametrize("console_scripts",
+                         ["test_ = distutils_install",
+                          "test_:test_ = distutils_install"])
+def test_uninstall_entry_point(script, console_scripts):
     """
     Test uninstall package with two or more entry points in the same section,
     whose name contain a colon.
     """
-    script.scratch_path.join("ep_install").mkdir()
-    pkg_path = script.scratch_path / 'ep_install'
-    pkg_path.join("setup.py").write(textwrap.dedent("""
-        from setuptools import setup
-        setup(
-            name='ep-install',
-            version='0.1',
-            entry_points={"pip_test.ep":
-                          ["ep:name1 = distutils_install",
-                           "ep:name2 = distutils_install"]
-                          }
-        )
-    """))
+    pkg_name = 'ep_install'
+    pkg_path = create_test_package_with_setup(
+        script,
+        name=pkg_name,
+        version='0.1',
+        entry_points={"console_scripts": [console_scripts, ],
+                      "pip_test.ep":
+                      ["ep:name1 = distutils_install",
+                       "ep:name2 = distutils_install"]
+                      }
+    )
+    script_name = script.bin_path.join(console_scripts.split('=')[0].strip())
     result = script.pip('install', pkg_path)
+    assert script_name.exists
     result = script.pip('list', '--format=legacy')
     assert "ep-install (0.1)" in result.stdout
     script.pip('uninstall', 'ep_install', '-y')
+    assert not script_name.exists
     result2 = script.pip('list', '--format=legacy')
     assert "ep-install (0.1)" not in result2.stdout
+
+
+def test_uninstall_gui_scripts(script):
+    """
+    Make sure that uninstall removes gui scripts
+    """
+    pkg_name = "gui_pkg"
+    pkg_path = create_test_package_with_setup(
+        script,
+        name=pkg_name,
+        version='0.1',
+        entry_points={"gui_scripts": ["test_ = distutils_install", ], }
+    )
+    script_name = script.bin_path.join('test_')
+    script.pip('install', pkg_path)
+    assert script_name.exists
+    script.pip('uninstall', pkg_name, '-y')
+    assert not script_name.exists
 
 
 @pytest.mark.network
