@@ -11,15 +11,21 @@ from pip.exceptions import InvalidWheelFilename, UnsupportedWheel
 from pip.utils import unpack_file
 
 
-def test_get_entrypoints(tmpdir):
-    with open(str(tmpdir.join("entry_points.txt")), "w") as fp:
+@pytest.mark.parametrize("console_scripts",
+                         ["pip = pip.main:pip", "pip:pip = pip.main:pip"])
+def test_get_entrypoints(tmpdir, console_scripts):
+    entry_points = tmpdir.join("entry_points.txt")
+    with open(str(entry_points), "w") as fp:
         fp.write("""
             [console_scripts]
-            pip = pip.main:pip
-        """)
+            {0}
+            [section]
+            common:one = module:func
+            common:two = module:other_func
+        """.format(console_scripts))
 
-    assert wheel.get_entrypoints(str(tmpdir.join("entry_points.txt"))) == (
-        {"pip": "pip.main:pip"},
+    assert wheel.get_entrypoints(str(entry_points)) == (
+        dict([console_scripts.split(' = ')]),
         {},
     )
 
